--- a/env_ldmmorph.yml
+++ b/env_ldmmorph.yml
@@ -1,8 +1,10 @@
-absl-py==2.1.0
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiosignal==1.3.1
-albucore==0.0.14
+
+dependencies:
+  - absl-py==2.1.0
+  - aiohappyeyeballs==2.4.0
+  - aiohttp==3.10.5
+  - aiosignal==1.3.1
+  - albucore==0.0.14
 albumentations==1.4.14
 annotated-types==0.7.0
 antlr4-python3-runtime==4.8
