--- a/environment.yaml
+++ b/environment.yaml
@@ -5,9 +5,8 @@ channels:
 dependencies:
   - python=3.8.5
   - pip=20.3
-  - cudatoolkit=12.1
-  - pytorch=2.1.0
-  - torchvision=0.16.0
+  - pytorch=2.1.0+cu121
+  - torchvision=0.16.0+cu121
   - numpy=1.24.4
   - pip:
     - albumentations==1.4.14
