--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ einops>=0.8.0
 nibabel
 natsort
 test-tube>=0.7.5
+-e git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers
 
 streamlit>=0.73.1
 einops==0.3.0
