--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ natsort==8.4.0
 pystrum==0.4
 test-tube>=0.7.5
 timm==1.0.12
+ml_collections==0.1.1
 
 -e git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers
 
